--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,71 @@
-h1{font-family: 'Comfortaa',
-cursive;
+:root{
+    --accent-color:#d472bc;
+    --header-font:'Montserrat',
+        sans-serif;
+    --para-font:'Comfortaa',
+        cursive;
+}
+
+@media (max-width: 520px) {
+    h1 {
+        padding-top: 5px;
+        margin-top: 5px;
+        text-align: center;
+    }
+    h2{
+        text-align: center;
+    }
+    .contact-btn {
+    display: block;
+    margin: 0 auto;
+        
+    }
+}
+
+
+
+
+h1{
+    font-family: 'Montserrat',
+            sans-serif;
+        font-weight: bold;
+        font-size: 64px;
+        padding-top: 60px;
+        margin-top: 60px;
 }
 
 h2{
-font-family: 'Montserrat',
-sans-serif;
+font-family: 'Comfortaa',
+        cursive;
+        font-size: 22px;
+        margin-top: 15px;
+        margin-bottom: 40px;
+        line-height:30px;
+       
+
 }
+
+.hero{
+    background-color:#fff9fe ;
+    padding:160px 0;
+}
+
+.pinklady{
+   border: solid 5px #d472bc;
+   border-radius: 15px;
+   margin:auto
+  
+}
+
+.contact-btn{
+    border-radius: 4px;
+    border: 1px solid var(--accent-color);
+    background-color: var(--accent-color);
+    text-decoration: none;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+        rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    padding: 10px 50px;
+    margin-bottom: 20px;
+}
+
