--- a/css/styles.css
+++ b/css/styles.css
@@ -7,29 +7,28 @@
 }
 
 @media (max-width: 500px) {
-    h1 {
+  
+    .h1-text {
         font-size: 40px;
         padding-top: 5px;
         margin-top: 5px;
       
     }
-
-    h2{
-        text-align: center;
-        font-size: 20px;
-        padding:0px 10px
-    }
+        }
     
-        
-    }
-    .hero{
-        padding: 80px 20px;
-    }
+        h2 {
+            text-align: center;
+            font-size: 20px;
+            padding: 0px 10px
+        }
+    
+        .hero {
+            padding: 80px 20px;
+}
 
 
 
-
-h1{
+.h1-text{
     text-align: center;
     font-family: 'Montserrat',
             sans-serif;
@@ -100,4 +99,44 @@ font-weight: bold;
 }
 .project-img:hover {
     transform: scale(1.1);
+}
+
+.about-section{
+    padding: 160px 20px;
+
+}
+.about-section h1{
+    font-size: 64px;
+    line-height: 80px;
+    font-family: var(--header-font);
+    font-weight: bold;
+  
+}
+
+.about-section p {
+    font-size:20px;
+    line-height: 30px;
+    font-family: var(--para-font);
+    margin-bottom: 40px;
+   
+}
+.about-section-content{
+    margin:30px;
+}
+
+.project-btn
+{
+border-radius: 4px;
+    border: 1px solid var(--accent-color);
+    background-color: var(--accent-color);
+    text-decoration: none;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+    rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    padding: 15px 30px;
+    
+}
+.about-img{
+    border-radius: 10px;
+box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
