--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,15 @@ font-weight: bold;
 
 }
 
+h4{
+    font-size: 28px ;
+    padding-top: 40px;
+    font-family: var(--header-font);
+    font-weight: bold;
+
+}
+
+
 .hero{
     background-color:#fcf9ff ;
     padding:140px 0;
@@ -139,4 +148,9 @@ border-radius: 4px;
 .about-img{
 border-radius: 10px;
 box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+
+.para-text{
+
+    font-size:18px ;
 }
