--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,7 @@ font-family: var(--para-font);
 
 h3{
 text-align: center;
-padding: 50px;
-padding-bottom: 0px;
+margin:48px;
 font-family: var(--header-font);
 font-weight: bold;
 
@@ -64,6 +63,12 @@ h4{
     font-family: var(--header-font);
     font-weight: bold;
 
+}
+
+h5{
+    font-size: 48px;
+    font-weight: bold;
+    font-family: var(--header-font);
 }
 
 .hero{
@@ -93,10 +98,8 @@ h4{
 }
 
 .projects{
-    border: solid 2px var(--accent-color);
-    border-radius: 5px;
-    padding: 50px;
-    margin: 50px;
+
+  
 }
 
 .project-img{
@@ -186,4 +189,46 @@ nav a:hover, nav li.active a {
 
 .logo{
    max-height: 50px;
+}
+
+footer{
+    margin: 60px 0; 
+}
+
+footer .contact-box{
+    background-color: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+
+}
+
+footer .email-link{
+    text-decoration: none;
+    color: #000;
+    font-size: 24px;
+}
+
+footer .social-links a {
+    margin: 0 20px;
+    color: var(--accent-color);
+    background-color: var(--secondary-color);
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 18px;
+    transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover{
+    color:#fff;
+    background-color: var(--accent-color);
+
+}
+
+footer p {
+    font-family: var(--para-font);
+}
+
+footer a {
+    font-family: var(--header-font);
+    font-weight: bold;
 }
