--- a/css/styles.css
+++ b/css/styles.css
@@ -8,33 +8,9 @@
         cursive;
 }
 
-@media (max-width: 500px) {
-.email-link {
-    font-size: 16px;
-}
 
-    .h1-text {
-        font-size: 40px;
-        padding-top: 5px;
-        margin-top: 5px;
-      
-    }
-        }
-    
-        h2 {
-            text-align: center;
-            font-size: 20px;
-            padding: 0px 10px
-        }
-    
-        .hero {
-            padding: 80px 20px;
-}
-
-
-
-.h1-text{
-    text-align: center;
+h1{
+   
     font-family: var(--header-font);
         font-weight: bold;
         font-size: 64px;
@@ -42,7 +18,7 @@
 }
 
 h2{
-    text-align: center;
+text-align: center;
 font-family: var(--para-font);
         font-size: 25px;
         margin-top: 15px;
@@ -65,6 +41,7 @@ h4{
     padding-top: 40px;
     font-family: var(--header-font);
     font-weight: bold;
+  
 
 }
 
@@ -74,6 +51,7 @@ h5{
     font-family: var(--header-font);
 }
 
+   
 
 
 .hero{
@@ -117,7 +95,7 @@ h5{
 }
 
 .content-container{
-    padding: 160px 20px;
+    padding: 130px 20px;
 
 }
 .content-container h1{
@@ -142,14 +120,18 @@ h5{
 .content h4{
     font-size: 24px;
     line-height: 1.5;
-    font-family: var(--para-font);
+    font-family: var(--header-font);
 }
 
  a{
     font-family: var(--para-font);
     text-decoration: none;
+    color: var(--accent-color);
 }
 
+a:hover{
+    color: #000;
+}
 
 
 .project-btn
@@ -164,10 +146,11 @@ border-radius: 4px;
     padding: 15px 30px;
     
 }
-.about-img{
+.site-imgs{
 vertical-align: middle;
 border-radius: 10px;
 box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+margin-top: 15px;
 }
 
 .para-text{
@@ -249,6 +232,7 @@ footer .social-links a:hover{
 
 footer p {
     font-family: var(--para-font);
+    font-size: 20px;
     margin-bottom: 0;
 }
 
@@ -257,3 +241,40 @@ footer a {
     font-weight: bold;
 }
 
+.contact-row{
+    border: solid 2px var(--secondary-color);
+    padding-top: 5px;
+    padding-bottom: 20px;
+    border-radius: 10px;
+
+}
+
+
+@media (max-width: 500px) {
+    h1 {
+        font-size: 40px;
+        padding-top: 5px;
+        margin-top: 5px;
+
+    }
+}
+
+h2 {
+    text-align: center;
+    font-size: 20px;
+    padding: 0px 10px
+}
+
+.hero {
+    padding: 80px 20px;
+
+    .about-img {
+        margin-top: 15px;
+    }
+
+    .email-link {
+        font-size: 16px;
+    }
+
+
+}
