--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,19 @@ border-radius: 4px;
     padding: 15px 30px;
     
 }
+
+.project-btnR{
+border-radius: 4px;
+    border: 1px solid var(--accent-color);
+    background-color: #fff;
+    text-decoration: none;
+    color: #b84672;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+    rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    padding: 15px 30px;
+    margin-left: 20px;
+}
+
 .site-imgs{
 vertical-align: middle;
 border-radius: 10px;
